# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#
[package]
name = "funless-fn"
version = "0.1.0"
edition = "2021"

[dependencies]
bollard = "0.12.0"
bytes = "1.1.0"
tonic = "0.7.0"
tokio = "1.15.0"
tower = "0.4"
futures-util = "0.3.21"

[dev-dependencies]
mockall = "0.11.0"
